--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href=" http://localhost:3000/assets/style.css" >
    
     <title>Social Network</title>
   </head>
